Fix capitalization in thesis title

--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -282,7 +282,7 @@ td.papers {
             <span style="font-size: 12pt;">
             <strong><a href="https://hxji.github.io" target="_blank">Houxiang Ji</a></strong>
 	    <br>
-	    Cutting The Datacenter Tax In Heterogeneous System: A Coherence-Spectrum Approach
+	    Cutting the Datacenter Tax in Heterogeneous System: A Coherence-Spectrum Approach
 	    <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Nov. 7, 2025.
             <br>
